# basealt_task

./: .gitignore  CMakeLists.txt  README.md
cli/: main.cpp
core/: lib.cpp  lib.hpp
